// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton Loader should match snapshot of dex skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
        "width": "100%",
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
  testID="dex_skeleton_loader"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={130}
    bbWidth="100%"
    focusable={false}
    height={130}
    interval={0.25}
    meetOrSlice={1}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 130,
          "width": "100%",
        },
      ]
    }
    vbHeight={130}
    vbWidth={328}
    width="100%"
  >
    <RNSVGGroup>
      <RNSVGRect
        clipPath="dex-animated-diff"
        fill={
          Array [
            1,
            "dex-diff",
          ]
        }
        height="100%"
        propList={
          Array [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
      <RNSVGDefs>
        <RNSVGClipPath
          name="dex-animated-diff"
        >
          <RNSVGCircle
            cx="17"
            cy="23"
            r="16"
          />
          <RNSVGRect
            height="20"
            width="100"
            x="50"
            y="13"
          />
          <RNSVGRect
            height="15"
            width="100"
            x="0"
            y="55"
          />
          <RNSVGRect
            height="15"
            width="150"
            x="210"
            y="55"
          />
          <RNSVGRect
            height="15"
            width="100"
            x="0"
            y="80"
          />
          <RNSVGRect
            height="15"
            width="150"
            x="210"
            y="80"
          />
          <RNSVGRect
            height="15"
            width="100"
            x="0"
            y="105"
          />
          <RNSVGRect
            height="15"
            width="150"
            x="210"
            y="105"
          />
        </RNSVGClipPath>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -1250325,
              0.5,
              -1,
              1,
              -1250325,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="dex-diff"
          x1="-100%"
          x2="0%"
          y1={0}
          y2={0}
        />
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Skeleton Loader should match snapshot of mnemonic word skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
        "width": "100%",
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
  testID="mnemonic_word_skeleton_loader"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={47}
    bbWidth="100%"
    focusable={false}
    height={47}
    interval={0.25}
    meetOrSlice={1}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 47,
          "width": "100%",
        },
      ]
    }
    vbHeight={47}
    vbWidth={400}
    width="100%"
  >
    <RNSVGGroup>
      <RNSVGRect
        clipPath="mnemonic_word-animated-diff"
        fill={
          Array [
            1,
            "mnemonic_word-diff",
          ]
        }
        height="100%"
        propList={
          Array [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
      <RNSVGDefs>
        <RNSVGClipPath
          name="mnemonic_word-animated-diff"
        >
          <RNSVGRect
            height="33"
            rx="3"
            ry="3"
            width="290"
            x="70"
            y="3"
          />
          <RNSVGCircle
            cx="20"
            cy="20"
            matrix={
              Array [
                1,
                0,
                -0,
                1,
                20,
                0,
              ]
            }
            r="20"
          />
        </RNSVGClipPath>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -1250325,
              0.5,
              -1,
              1,
              -1250325,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="mnemonic_word-diff"
          x1="-100%"
          x2="0%"
          y1={0}
          y2={0}
        />
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Skeleton Loader should match snapshot of transaction skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
        "width": "100%",
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
  testID="transaction_skeleton_loader"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={47}
    bbWidth="100%"
    focusable={false}
    height={47}
    interval={0.25}
    meetOrSlice={1}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 47,
          "width": "100%",
        },
      ]
    }
    vbHeight={47}
    vbWidth={344}
    width="100%"
  >
    <RNSVGGroup>
      <RNSVGRect
        clipPath="transaction-animated-diff"
        fill={
          Array [
            1,
            "transaction-diff",
          ]
        }
        height="100%"
        propList={
          Array [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
      <RNSVGDefs>
        <RNSVGClipPath
          name="transaction-animated-diff"
        >
          <RNSVGCircle
            cx="17"
            cy="23"
            r="10"
          />
          <RNSVGRect
            height="15"
            width="100"
            x="44"
            y="7"
          />
          <RNSVGRect
            height="10"
            width="100"
            x="44"
            y="29"
          />
          <RNSVGRect
            height="15"
            width="85"
            x="250"
            y="16"
          />
        </RNSVGClipPath>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -1250325,
              0.5,
              -1,
              1,
              -1250325,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="transaction-diff"
          x1="-100%"
          x2="0%"
          y1={0}
          y2={0}
        />
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
